Bug#37548: result value erronously reported being NULL in certain subqueries

When switching to indexed ORDER BY we must be sure to reset the index read
flag if we are switching from a covering index to non-covering.